<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yannis.mynote.NoteDetailsActivity">

    <EditText
        android:id="@+id/txt_note"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/content" />

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_insert"
        android:layout_marginEnd="25dp"
        android:text="@string/back" />

</RelativeLayout>