<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="com.example.yannis.mynote.NoteDetailsActivity">

    <TextView
        android:id="@+id/tv_date_header"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/date_in_millis" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/delete"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_delete"
        android:layout_marginEnd="25dp"
        android:text="@string/back"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tv_content_header"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tv_date_header"
        android:layout_marginTop="48dp"
        android:text="@string/content" />

    <TextView
        android:id="@+id/tv_date"
        android:textColor="@color/white"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv_date_header"
        android:layout_marginEnd="10dp"
        tools:text="" />

    <TextView
        android:id="@+id/tv_content"
        android:textColor="@color/white"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_date"
        android:layout_alignTop="@+id/tv_content_header"
        tools:text="" />

    <ImageView
        android:id="@+id/lv_results"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/grey2" />

</RelativeLayout>